[package]
name = "riemann-rust-client"
version = "0.1.0"
authors = ["mcorbin <corbin.math@gmail.com>"]

[dependencies]
protobuf = "1.2.2"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
byteorder = "1"

[lib]
name = "riemann_rust"

[[bin]]
name = "rustmann"