[package]
name = "riemann-rust-client"
version = "0.1.0"
authors = ["mcorbin <corbin.math@gmail.com>"]

[dependencies]
protobuf = "1.4.2"
clap = {version = "2.27.1", features =[ "yaml"]}
chrono = "0.4"
native-tls = "0.1"

[lib]
name = "rustmann"
path = "src/lib.rs"

[[bin]]
name = "rustmann"
path = "src/main.rs"